feat: refatorado escolha da proxima cidade